--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,61 +1,31 @@
-experiences:
-
-- place: "University of Washington"
-  time: "2023 - now"
-  title: "Assistant Professor"
-  subtitle: "Information School"
-  category: "work"
-
-- place: "Stanford"
-  time: "2020 - 2023"
-  title: "Postdoc"
-  subtitle: "MS&E"
-  category: "work"
-
-- place: "MIT"
-  time: "2014 - 2020"
-  title: "Ph.D. Student"
-  subtitle: "Media Lab, Laboratory for Social Machines"
+experiences:  
+- place: "UNC Chapel Hill"
+  time: "Aug. 2024 - "
+  title: "Ph.D. Student in Computer Science"
+  subtitle: "Advisor: <a href='https://tianlong-chen.github.io/'  style='text-decoration: none;'>Prof. Tianlong Chen</a>"
   category: "school"
 
-- place: "Facebook"
-  time: "Summer 2019"
-  title: "Research Scientist, Intern"
-  subtitle: "Core Data Science"
-  category: "work"
-
-- place: "LinkedIn"
-  time: "Summer 2016"
-  title: "Research Scientist, Intern"
-  subtitle: "Experimentation Group"
-  category: "work"
-
-- place: "Amazon"
-  time: "Summer 2014"
-  title: "Machine Learning Scientist, Intern"
-  subtitle: "Scalable Machine Learning Group"
-  category: "work"
-
-- place: "Yahoo! Labs"
-  time: "Feb-Aug 2013"
-  title: "Research Scientist, Intern"
-  subtitle: "Social Media Engagement Group"
-  category: "work"
-
-- place: "EM-DMKM"
-  time: "Sep 2011 – Aug 2013"
-  title: "M.Sc. Student"
-  subtitle: "Masters in Data Mining and Knowledge Management <br/> Year 1: University Pierre et Marie Curie <br/> Year 2: Universitat Politecnica de Catalunya <br/>"
+- place: "KAIST"
+  time: "Mar. 2021 - Aug. 2023"
+  title: "M.S. in Industrial & Systems Engineering"
+  subtitle: "Advisor: <a href='https://dsail.kaist.ac.kr/professor/'  style='text-decoration: none;'>Prof. Chanyoung Park</a>"
   category: "school"
 
-- place: "Jozef Stefan Institute"
-  time: "Jan-Aug 2011"
-  title: "Research Assistant"
-  subtitle: "Department of Knowledge Technologies"
+- place: "Tokyo Tech"
+  time: "Oct. 2022 - Feb. 2023"
+  title: "Visting Researcher at Dept. of Computer Science"
+  subtitle: "Host: <a href='http://www.net.c.titech.ac.jp/murata.html'  style='text-decoration: none;'>Prof. Tsuyoshi Murata</a>"
   category: "work"
 
-- place: "Staffordshire University"
-  time: "2007 - 2010"
-  title: "B.Sc. Student"
-  subtitle: "Computing Science <br/> First Class Honours"
+- place: "Hanyang University"
+  time: "Mar. 2015 - Aug. 2021"
+  title: "B.S. in Industrial Engineering"
+  subtitle: "Summa Cum Laude"
   category: "school"
+
+# - place: "Staffordshire University"
+#   time: "2007 - 2010"
+#   title: "B.Sc. Student"
+#   subtitle: "Computing Science <br/> First Class Honours"
+#   category: "school"
+    
