--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,9 +1,10 @@
-name: "Martin Saveski"
-title: "Assistant Professor, University of Washington"
-email: "msaveski [AT] uw.edu"
-profile_pic: "/assets/profile-pics/SU_small.jpg"
-twitter: "https://twitter.com/msaveski"
-linkedin: "https://www.linkedin.com/in/msaveski"
-github: "https://github.com/msaveski"
-google_scholar: "https://scholar.google.com/citations?user=M3D870YAAAAJ&hl=en"
+name: "Sukwon Yun"
+title: "Incoming Ph.D. Student, UNC Chapel Hill"
+email: "swyun@cs.unc.edu"
+profile_pic: "/assets/profile-pics/profile_gray.jpeg"
+twitter: "https://twitter.com/sw_yun"
+cv: "assets/cv/CV_Sukwon_Yun_0311.pdf"
+linkedin: "https://www.linkedin.com/in/sukwon-yun-bb55351b1"
+github: "https://github.com/SukwonYun"
+google_scholar: "https://scholar.google.com/citations?user=AgqvtZkAAAAJ&hl=en"
 google_analystics_tracking_id: 'UA-46778883-1'
