--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -7,4 +7,4 @@ cv: "assets/cv/CV_Sukwon_Yun_0311.pdf"
 linkedin: "https://www.linkedin.com/in/sukwon-yun-bb55351b1"
 github: "https://github.com/SukwonYun"
 google_scholar: "https://scholar.google.com/citations?user=AgqvtZkAAAAJ&hl=en"
-google_analystics_tracking_id: 'UA-46778883-1'
+google_analystics_tracking_id: 'G-F492QWZL6M'
