--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,7 @@
 
 news:
+  - content: '<b>Apr., 2024</b>&nbsp;&nbsp;&nbsp;&nbsp; A paper got accepted at <b style="color:#fa8072;">WWW 2024 Workshop on Data-centric Artificial Intelligence (DCAI)</b>.'
+    year: "2024"
 
   - content: '<b>Mar., 2024</b>&nbsp;&nbsp;&nbsp;&nbsp; I will be joining <b>UNITES Lab@UNC Chapel Hill</b> this Fall as a Ph.D. Student!'
     year: "2024"
