--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 
 news:
+  - content: '<b>Apr., 2024</b>&nbsp;&nbsp;&nbsp;&nbsp; A paper got accepted at <b style="color:#fa8072;">Briefings in Bioinformatics 2024</b>.'
+    year: "2024"
+
   - content: '<b>Apr., 2024</b>&nbsp;&nbsp;&nbsp;&nbsp; A paper got accepted at <b style="color:#fa8072;">WWW 2024 Workshop on Data-centric Artificial Intelligence (DCAI)</b>.'
     year: "2024"
 
