--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -3,7 +3,7 @@ experiences:
   time: "Aug. 2024 - "
   title: "Ph.D. Student in Computer Science"
   subtitle: "Advisor: <a href='https://tianlong-chen.github.io/'  style='text-decoration: none;'>Prof. Tianlong Chen</a>"
-  category: "school"
+  category: "work"
 
 - place: "KAIST"
   time: "Mar. 2021 - Aug. 2023"
