--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,9 +1,9 @@
 name: "Sukwon Yun"
-title: "Incoming Ph.D. Student, UNC Chapel Hill"
+title: "Ph.D. Student, UNC Chapel Hill"
 email: "swyun@cs.unc.edu"
 profile_pic: "/assets/profile-pics/profile_gray.jpeg"
 twitter: "https://twitter.com/sw_yun"
-cv: "assets/cv/CV_Sukwon_Yun_0727.pdf"
+cv: "assets/cv/CV_Sukwon_Yun_0813.pdf"
 linkedin: "https://www.linkedin.com/in/sukwon-yun-bb55351b1"
 github: "https://github.com/SukwonYun"
 google_scholar: "https://scholar.google.com/citations?user=AgqvtZkAAAAJ&hl=en"
