--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -17,11 +17,11 @@ experiences:
   subtitle: "Advisor: <a href='https://dsail.kaist.ac.kr/professor/'  style='text-decoration: none;'>Prof. Chanyoung Park</a>"
   category: "school"
 
-- place: "Tokyo Tech"
-  time: "Oct. 2022 - Feb. 2023"
-  title: "Visting Researcher at Dept. of Computer Science"
-  subtitle: "Host: <a href='http://www.net.c.titech.ac.jp/murata.html'  style='text-decoration: none;'>Prof. Tsuyoshi Murata</a>"
-  category: "work"
+# - place: "Tokyo Tech"
+#   time: "Oct. 2022 - Feb. 2023"
+#   title: "Visting Researcher at Dept. of Computer Science"
+#   subtitle: "Host: <a href='http://www.net.c.titech.ac.jp/murata.html'  style='text-decoration: none;'>Prof. Tsuyoshi Murata</a>"
+#   category: "work"
 
 - place: "Hanyang University"
   time: "Mar. 2015 - Aug. 2021"
