--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,10 +1,10 @@
-name: "Sukwon Yun"
+name: "Yoonsub Kim"
 title: "Ph.D. Student, UNC Chapel Hill"
-email: "swyun@cs.unc.edu"
-profile_pic: "/assets/profile-pics/profile_gray.jpeg"
-twitter: "https://twitter.com/sw_yun"
+email: "yoonsub@unc.edu"
+profile_pic: "/assets/profile-pics/profile.jpg"
+# twitter: "https://twitter.com/sw_yun"
 cv: "assets/cv/CV_Sukwon_Yun_0813.pdf"
-linkedin: "https://www.linkedin.com/in/sukwon-yun-bb55351b1"
-github: "https://github.com/SukwonYun"
-google_scholar: "https://scholar.google.com/citations?user=AgqvtZkAAAAJ&hl=en"
-google_analystics_tracking_id: 'G-F492QWZL6M'
+linkedin: "https://www.linkedin.com/in/yoonsub-kim-9a7a85270/"
+# github: "https://github.com/SukwonYun"
+google_scholar: "https://scholar.google.com/citations?user=uxOtO34AAAAJ&hl=en"
+# google_analystics_tracking_id: 'G-F492QWZL6M'
