--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -3,7 +3,7 @@ title: "Ph.D. Student, UNC Chapel Hill"
 email: "yoonsub@unc.edu"
 profile_pic: "/assets/profile-pics/profile.jpg"
 # twitter: "https://twitter.com/sw_yun"
-cv: "assets/cv/CV_Sukwon_Yun_0813.pdf"
+cv: "assets/cv/CV_2408.pdf"
 linkedin: "https://www.linkedin.com/in/yoonsub-kim-9a7a85270/"
 # github: "https://github.com/SukwonYun"
 google_scholar: "https://scholar.google.com/citations?user=uxOtO34AAAAJ&hl=en"
