--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,71 +1,71 @@
 papers:
-  - title: "Subgraph Federated Learning for Local Generalization"
-    authors: "Sungwon Kim, Yoonho Lee, Yunhak Oh, Namkyeong Lee, <b>Sukwon Yun</b>, Junseok Lee, Sein Kim, Carl Yang, Chanyoung Park"
-    venue: "KDD 2024 Workshop on Federated Learning for Data Mining and Graph Analytics (FedKDD) <span style='color: red; font-weight: bold;'>(Oral)</span>"
-    paper_pdf: "https://sukwonyun.github.io/"
+  - title: "Estimating the bioaccumulation potential of hydrophobic ultraviolet stabilizers using experimental partitioning properties"
+    authors: "Anh T. Ngoc Do, <b>Yoonsub Kim</b>, Yeonjeong Ha, Jung-Hwan Kwon"
+    venue: "International Journal of Environmental Research and Public Health"
+    paper_pdf: "https://www.mdpi.com/1660-4601/19/7/3989"
     # code: "https://github.com/UNITES-Lab/Mew"
-    year: "2024"
+    year: "2022"
 
-  - title: "Mew: Multiplexed Immunofluorescence Image Analysis through an Efficient Multiplex Network"
-    authors: "<b>Sukwon Yun</b>, Jie Peng, Alexandro Trevino, Chanyoung Park, Tianlong Chen"
-    venue: "ECCV'24: European Conference on Computer Vision"
-    paper_pdf: "https://arxiv.org/abs/2407.17857"
-    code: "https://github.com/UNITES-Lab/Mew"
-    year: "2024"
+  - title: "Exposure to permethrin used as a home insecticide: A case study comparing model predictions and excretion of metabolites"
+    authors: "Seon-Kyung Park, Heon-Jun Lee, Eugene Song, <b>Yoonsub Kim</b>, Jong-Hyeon Lee, Hyun Jung Yoo, Jeong-Eun Oh, Jung-Hwan Kwon"
+    venue: "Environment International"
+    paper_pdf: "https://www.sciencedirect.com/science/article/pii/S0160412021002063"
+    # code: "https://github.com/UNITES-Lab/Mew"
+    year: "2021"
 
-  - title: "Single-cell RNA Sequencing Data Imputation Using Bi-level Feature Propagation"
-    authors: "Junseok Lee*, <b>Sukwon Yun*</b>, Yeongmin Kim, Tianlong Chen, Manolis Kellis, Chanyoung Park"
-    venue: "Briefings in Bioinformatics 2024"
-    paper_pdf: "https://academic.oup.com/bib/article/25/3/bbae209/7665119"
-    code: "https://github.com/Junseok0207/scBFP"
-    year: "2024"
+  - title: "Evaluating the fate of hexabromocyclododecanes in the coastal environment: Fugacity analysis using field data"
+    authors: "<b>Yoonsub Kim</b>, Hwang Lee, Mi Jang, Sang-Hee Hong, Jung-Hwan Kwon"
+    venue: "Environmental Pollution"
+    paper_pdf: "https://www.sciencedirect.com/science/article/abs/pii/S0269749121010435"
+    # code: "https://github.com/Junseok0207/scBFP"
+    year: "2021"
 
-  - title: "Noise Robust Graph Learning under Feature-Dependent Graph-Noise"
-    authors: "Yeonjun In, Kanghoon Yoon, <b>Sukwon Yun</b>, Kibum Kim, Sungchul Kim, Chanyoung Park"
-    venue: "WWW 2024 Workshop on Data-centric Artificial Intelligence (DCAI) <span style='color: red; font-weight: bold;'>(Oral)</span>"
-    paper_pdf: "https://sukwonyun.github.io/"
-    year: "2024"
+  - title: "Spatial uncertainty in modeling inhalation exposure to volatile organic compounds in response to the application of consumer spray products"
+    authors: "Yerin Jung, <b>Yoonsub Kim</b>, Hwi-Soo Seol, Jong-Hyeon Lee, Jung-Hwan Kwon"
+    venue: "International Journal of Environmental Research and Public Health <span style='color: red; font-weight: bold;'>"
+    paper_pdf: "https://www.mdpi.com/1660-4601/18/10/5334"
+    year: "2021"
 
-  - title: "DEGNN: Dual Experts Graph Neural Network Handling Both Edge and Node Feature Noise"
-    authors: "Tai Hasegawa, <b>Sukwon Yun</b>, Xin Liu, Yin Jun Phua, Tsuyoshi Murata"
-    venue: "PAKDD'24: Pacific-Asia Conference on Knowledge Discovery and Data Mining"
-    paper_pdf: "https://arxiv.org/abs/2404.09207"
-    code: "https://github.com/TaiHasegawa/DEGNN"
-    year: "2024"
+  - title: "Development of a personal passive air sampler for estimating exposure to effective chlorine while using chlorine-based disinfectants"
+    authors: "Yeonjeong Ha, <b>Yoonsub Kim</b>, Eugene Song, Hyun Jung Yoo, Jung-Hwan Kwon"
+    venue: "Indoor Air"
+    paper_pdf: "https://onlinelibrary.wiley.com/doi/abs/10.1111/ina.12747"
+    # code: "https://github.com/TaiHasegawa/DEGNN"
+    year: "2020"
 
-  - title: "MUSE: Music Recommender System with Shuffle Play Recommendation Enhancement"
-    authors: "Yunhak Oh*, <b>Sukwon Yun*</b>, Dongmin Hyun, Sein Kim, Chanyoung Park"
-    venue: "CIKM'23: ACM International Conference on Information and Knowledge Management"
-    paper_pdf: "https://arxiv.org/abs/2308.09649"
-    code: "https://github.com/yunhak0/muse"
-    year: "2023"
+  - title: "Experimental determination of indoor air concentration of 5-chloro-2-methylisothiazol-3(2H)-one/ 2-methylisothiazol-3(2H)-one (CMIT/MIT) emitted by the use of humidifier disinfectant"
+    authors: "Seon-Kyung Park, Hwi-Soo Seol, Hee-Jin Park, <b>Yoonsub Kim</b>, Seung-Hun Ryu, Jaehoon Kim, Suejin Kim, Jong-Hyeon Lee, Jung-Hwan Kwon"
+    venue: "Environmental Analysis Health and Toxicology"
+    paper_pdf: "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7374189/"
+    # code: "https://github.com/yunhak0/muse"
+    year: "2020"
 
-  - title: "S-Mixup: Structural Mixup for Graph Neural Networks"
-    authors: "Junghurn Kim*, <b>Sukwon Yun*</b>, Chanyoung Park"
-    venue: "CIKM'23 (Short): ACM International Conference on Information and Knowledge Management"
-    paper_pdf: "https://arxiv.org/abs/2308.08097"
-    code: "https://github.com/SukwonYun/S-Mixup"
-    year: "2023"
+  # - title: "S-Mixup: Structural Mixup for Graph Neural Networks"
+  #   authors: "Junghurn Kim*, <b>Sukwon Yun*</b>, Chanyoung Park"
+  #   venue: "CIKM'23 (Short): ACM International Conference on Information and Knowledge Management"
+  #   paper_pdf: "https://arxiv.org/abs/2308.08097"
+  #   code: "https://github.com/SukwonYun/S-Mixup"
+  #   year: "2023"
   
-  - title: "Single-cell RNA-seq data imputation using Feature Propagation"
-    authors: "<b>Sukwon Yun*</b>, Junseok Lee*, Chanyoung Park"
-    venue: "ICMLW'23: ICML Workshop on Computational Biology <span style='color: red; font-weight: bold;'>(Best Paper Award)</span>"
-    paper_pdf: "https://arxiv.org/abs/2307.10037"
-    code: "https://github.com/junseok0207/scfp"
-    slides: "/assets/publications/2023_scfp/slides_update.pdf"
-    year: "2023"
+  # - title: "Single-cell RNA-seq data imputation using Feature Propagation"
+  #   authors: "<b>Sukwon Yun*</b>, Junseok Lee*, Chanyoung Park"
+  #   venue: "ICMLW'23: ICML Workshop on Computational Biology <span style='color: red; font-weight: bold;'>(Best Paper Award)</span>"
+  #   paper_pdf: "https://arxiv.org/abs/2307.10037"
+  #   code: "https://github.com/junseok0207/scfp"
+  #   slides: "/assets/publications/2023_scfp/slides_update.pdf"
+  #   year: "2023"
 
-  - title: "MELT: Mutual Enhancement of Long-Tailed User and Item for Sequential Recommendation"
-    authors: "Kibum Kim, Dongmin Hyun, <b>Sukwon Yun</b>, Chanyoung Park"
-    venue: "SIGIR'23: ACM SIGIR Conference on Research and Development in Information Retrieval"
-    paper_pdf: "https://arxiv.org/abs/2304.08382"
-    code: "https://github.com/rlqja1107/melt"
-    year: "2023"
+  # - title: "MELT: Mutual Enhancement of Long-Tailed User and Item for Sequential Recommendation"
+  #   authors: "Kibum Kim, Dongmin Hyun, <b>Sukwon Yun</b>, Chanyoung Park"
+  #   venue: "SIGIR'23: ACM SIGIR Conference on Research and Development in Information Retrieval"
+  #   paper_pdf: "https://arxiv.org/abs/2304.08382"
+  #   code: "https://github.com/rlqja1107/melt"
+  #   year: "2023"
   
-  - title: "LTE4G: Long-Tail Experts for Graph Neural Networks"
-    authors: "<b>Sukwon Yun</b>, Kibum Kim, Kanghoon Yoon, Chanyoung Park"
-    venue: "CIKM'22: ACM International Conference on Information and Knowledge Management"
-    paper_pdf: "https://arxiv.org/abs/2208.10205"
-    code: "https://github.com/SukwonYun/LTE4G"
-    year: "2023"
+  # - title: "LTE4G: Long-Tail Experts for Graph Neural Networks"
+  #   authors: "<b>Sukwon Yun</b>, Kibum Kim, Kanghoon Yoon, Chanyoung Park"
+  #   venue: "CIKM'22: ACM International Conference on Information and Knowledge Management"
+  #   paper_pdf: "https://arxiv.org/abs/2208.10205"
+  #   code: "https://github.com/SukwonYun/LTE4G"
+  #   year: "2023"
   
